@@ -5414,7 +5414,7 @@ name|state
 operator|.
 name|getShardId
 argument_list|(
-name|getBaseUrl
+name|getNodeName
 argument_list|()
 argument_list|,
 name|desc
@@ -6568,7 +6568,7 @@ control|)
 block|{
 comment|// TODO: for really large clusters, we could 'index' on this
 name|String
-name|baseUrl
+name|nodeName
 init|=
 name|replica
 operator|.
@@ -6576,7 +6576,7 @@ name|getStr
 argument_list|(
 name|ZkStateReader
 operator|.
-name|BASE_URL_PROP
+name|NODE_NAME_PROP
 argument_list|)
 decl_stmt|;
 name|String
@@ -6592,9 +6592,9 @@ name|CORE_NAME_PROP
 argument_list|)
 decl_stmt|;
 name|String
-name|msgBaseUrl
+name|msgNodeName
 init|=
-name|getBaseUrl
+name|getNodeName
 argument_list|()
 decl_stmt|;
 name|String
@@ -6607,11 +6607,11 @@ argument_list|()
 decl_stmt|;
 if|if
 condition|(
-name|baseUrl
+name|nodeName
 operator|.
 name|equals
 argument_list|(
-name|msgBaseUrl
+name|msgNodeName
 argument_list|)
 operator|&&
 name|core
@@ -6712,7 +6712,7 @@ argument_list|()
 operator|.
 name|getShardId
 argument_list|(
-name|getBaseUrl
+name|getNodeName
 argument_list|()
 argument_list|,
 name|cd
