@@ -401,6 +401,9 @@ Bug Fixes
 * SOLR-5448: ShowFileRequestHandler treats everything as Directory, when in
   Cloud-Mode. (Erick Erickson, steffkes)
 
+* SOLR-5770: All attempts to match a SolrCore with it's state in clusterstate.json 
+  should be done with the CoreNodeName. (Steve Davids via Mark Miller)
+
 Optimizations
 ----------------------
 
